--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/bridau19/dyn-web-exercise-four/issues"
   },
-  "homepage": "https://github.com/bridau19/dyn-web-exercise-four#readme"
+  "homepage": "https://github.com/bridau19/dyn-web-exercise-four#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "firebase": "^9.2.0"
+  }
 }
